[DC-795] Catalog - High severity security issue - Upgrade logback-core to 1.2.13 Due Jan 3 (#173)
Updates dependency management plugin
Updates gradle plugin
Updates terra-common-lib 
Updates terra data repo client to jakarta version
Updates springboot
Updates sam client version
Updates swagger codegen and annotations

---------

Co-authored-by: rjohanek <rjohanek@broadinstitute.org>