@@ -22,10 +22,6 @@ generateSwaggerCode {
     language = 'java'
     library = 'jersey2'
 
-    // For Swagger Codegen v3 on Java 16+
-    // See https://github.com/swagger-api/swagger-codegen/issues/10966
-    jvmArgs = ['--add-opens=java.base/java.util=ALL-UNNAMED']
-
     components = [
         apiDocs  : false, apiTests: false,
         modelDocs: false, modelTests: false
@@ -36,7 +32,8 @@ generateSwaggerCode {
         apiPackage    : "${artifactGroup}.api",
         invokerPackage: "${artifactGroup}.client",
         dateLibrary   : 'java11',
-        java8         : true
+        java8         : true,
+        jakarta       : true
     ]
 
     rawOptions = ['--ignore-file-override', "${projectDir}/.swagger-codegen-ignore"]
